--- a/Css/kasper.css
+++ b/Css/kasper.css
@@ -561,7 +561,7 @@ header .icon:before {
 
 .design {
     max-height: 600px;
-    background-image: url(/Images/Design-background.jpg);
+    background-image: url(../Images/Design-background.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -594,7 +594,7 @@ header .icon:before {
     width: 170px;
     height: 390px;
 
-    background-image: url(/Images/Phone-white.png);
+    background-image: url(../Images/Phone-white.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -610,7 +610,7 @@ header .icon:before {
 
     border-radius: 4px;
 
-    background-image: url(/Images/Friendlist.jpg);
+    background-image: url(../Images/Friendlist.jpg);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -618,7 +618,7 @@ header .icon:before {
 .design .phones .friendlist {
     width: 100%;
     height: 100%;
-    background-image: url(/Images/Phone-black.png);
+    background-image: url(../Images/Phone-black.png);
     background-size: contain;
     background-repeat: no-repeat;
 
@@ -639,7 +639,7 @@ header .icon:before {
     z-index: 4;
     border-radius: 4px;
 
-    background-image: url(/Images/homepage.JPG);
+    background-image: url(../Images/homepage.JPG);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
